# sbpl_3dnav_planner

octomap_server/: .cproject  .project  .pydevproject  3dnav_map.map  CMakeLists.txt  cmake_install.cmake  sushi.bt
octomap_server/config/: pr2_planning_description.yaml
octomap_server/launch/: laser+stereo-perception.launch  octomap.launch  octomap_deps.launch  octomap_localization.launch  octomap_no_env_server.launch
octomap_server/src/: .OctomapServer.cpp.swp  .TrackingOctomapServer.cpp.swp  OctomapServer.cpp  static_planning_scene_server.cpp
pose_follower_3d/: 2011-04-27-17-18-59.bag  convert_to_arm_navigation_msgs.sh  manifest.xml
pose_follower_3d/.svn/: all-wcprops  entries
pose_follower_3d/src/: pose_follower_3d.cpp
pr2_arm_kinematics/src/: pr2_arm_ik.cpp  pr2_arm_ik_solver.cpp  pr2_arm_kinematics_plugin.cpp  pr2_arm_kinematics_utils.cpp
pviz/include/pviz/: pviz.h
pviz/src/: pviz.cpp
sbpl_arm_planner/: CMakeLists.txt  manifest.xml
sbpl_arm_planner/src/: occupancy_grid.cpp  sbpl_arm_model.cpp  sbpl_collision_space.cpp  sbpl_geometry_utils.cpp
sbpl_cartesian_arm_planning/sbpl_arm_planner/: CMakeLists.txt  manifest.xml
sbpl_full_body_planning/sbpl_two_arm_planner/: CMakeLists.txt  manifest.xml
sbpl_full_body_planning/sbpl_two_arm_planner/config/: pr2_both_arms.yaml
sbpl_full_body_planning/sbpl_two_arm_planner/include/sbpl_two_arm_planner/: environment_dualrobarm3d.h  sbpl_dual_arm_planner_params.h  sbpl_dual_collision_space.h
sbpl_full_body_planning/sbpl_two_arm_planner/src/: environment_dualrobarm3d.cpp  plan_path.cpp  sbpl_dual_arm_planner_params.cpp  sbpl_dual_collision_space.cpp
sbpl_full_body_planning/sbpl_two_arm_planner_node/: CMakeLists.txt  backgammon.txt  manifest.xml  tray.txt
sbpl_full_body_planning/sbpl_two_arm_planner_node/env/: bar.env  bookshelf2.env  pole.env  tabletop.env  tabletop2.env  tabletop_tray.env
sbpl_full_body_planning/sbpl_two_arm_planner_node/include/sbpl_two_arm_planner_node/: arm.h  sbpl_two_arm_planner_node.h  sbpl_two_arm_planner_node_library.h  test_sbpl_dual_collision_space.h  visualize_arm.h
sbpl_full_body_planning/sbpl_two_arm_planner_node/launch/: bookshelf1.launch  goal9.launch  metal_tray2-2.launch  request_plan.launch  sbpl_planning_both_arms.launch  sbpl_planning_left_arm.launch  sbpl_planning_right_arm.launch
sbpl_full_body_planning/sbpl_two_arm_planner_node/launch/table_wine_glass/: metal_tray2-2.launch
sbpl_full_body_planning/sbpl_two_arm_planner_node/launch/tray2_bookshelf/: bookshelf2.launch
sbpl_full_body_planning/sbpl_two_arm_planner_node/launch/tray_bookshelf/: bookshelf2.launch  bookshelf3.launch
sbpl_full_body_planning/sbpl_two_arm_planner_node/launch/tunnel_wine_glass/: metal_tray3.launch
sbpl_full_body_planning/sbpl_two_arm_planner_node/src/: request_plan.cpp  run_planner_node.cpp  sbpl_two_arm_planner_node.cpp  sbpl_two_arm_planner_node_library.cpp  test_sbpl_dual_collision_space.cpp  torso.cpp  visualize_arm.cpp
(+755 files in other folders)
